--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
 
     <footer>
-        <p>© 2024 Web Masters | <a href="https://www.w3.org/WAI/" target="_blank">Accessibility Guidelines</a></p>
+        <p>© 2025 Renza-afro | <a href="https://www.w3.org/WAI/" target="_blank">Accessibility Guidelines</a></p>
     </footer>
 </body>
 </html>
